2008-08-22  Helmut Eller  <heller@common-lisp.net>

	In backtraces, escape newlines in strings as \n.

	* swank.lisp (*backtrace-pprint-dispatch-table*): New.
	(*backtrace-printer-bindings*): Use it.

2008-08-22  Stas Boukarev <stassats@gmail.com>

	* metering.lisp: Add deftypes for time-type and cons-type, which
	are not defined in newer versions of CCL.

2008-08-22  Stelian Ionescu <sionescu@common-lisp.net>

	* swank-ecl.lisp: Add a few EVAL-WHENs to fix compilation.

2008-08-22  Helmut Eller  <heller@common-lisp.net>

	Collect most of the inspector state in a structrure.
	Truncate the printer output more aggressively.

	* swank.lisp (inspector-state): New structure.
	(*istate*): New variable holds the current state.
	(inspect-object, inspector-content, inspector-nth-part)
	(inspector-range, inspector-call-nth-action, describe-inspectee):
	Use it.
	(inspector-pop, inspector-next): Implemented forward/backward a
	bit differently.
	(emacs-inspect/printer-bindings, istate>elisp): New functions.
	(to-line, truncate-string): New functions.

2008-08-18  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (install-fd-handler): Bind *emacs-connection* with
	with-connection, for case when the signal hander is called out of
	the blue.
	(swank-debugger-hook): Don't assume that the hook argument is
	#'swank-debugger-hook itself.

	* test.sh (usage): Use cat rather not echo for here-documents.

2008-08-17  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-inspector-show-source): New command.
	(slime-inspector-mode-map): Bind it to ".".
	(sldb-highlight-sexp): Use slime-flash-region rather than a
	permanent overlay.
	(slime-popup-buffer-quit): Must call bury-buffer without argument.

	* swank.lisp (find-source-location-for-emacs): New function.

	* slime.el (slime-add-local-hook): Renamed from add-local-hook.
	(slime-switch-to-output-buffer): Drop the connection argument.  It
	was never used.
	(slime-switch-to-output-buffer-search-all-frames): Deleted. Use